Add delete intersection endpoint
