# api-gateway/cmd/main.go
@@ -111,7 +111,7 @@ func setupRoutes(
 	mux.HandleFunc("GET /intersections/{id}", intersectionHandler.GetIntersection)
 	mux.HandleFunc("POST /intersections", intersectionHandler.CreateIntersection)
 	mux.HandleFunc("PATCH /intersections/{id}", intersectionHandler.UpdateIntersection)
-	mux.HandleFunc("DELETE /intersections/{id}", NotImplemented)
+	mux.HandleFunc("DELETE /intersections/{id}", intersectionHandler.DeleteIntersection)
 	mux.HandleFunc("POST /intersections/{id}/optimise", NotImplemented)
 	mux.HandleFunc("GET /intersections/simple", NotImplemented)
 	log.Println("Initialized Intersection Handlers.")
